<resources>
    <string name="app_name">TimeSheet</string>
    <string name="create_timesheets">Create Timesheets</string>
    <string name="view_timesheets">View Timesheets</string>
    <string name="week_ending">Week Ending</string>
    <string name="day">Day</string>
    <string name="task">Task</string>
    <string name="hours">Hours</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="total">Total</string>
    <string name="monday">Monday</string>
    <string name="saturday">Saturday</string>
    <string name="friday">Friday</string>
    <string name="thursday">Thursday</string>
    <string name="wednesday">Wednesday</string>
    <string name="tuesday">Tuesday</string>
    <string name="_4_seb">4-Seb</string>
    <string name="total_hours">Total Hours</string>
    <string name="action">Action</string>

</resources>